feat: Refactor Pedido and related classes for improved structure and readability